--- a/index.html
+++ b/index.html
@@ -8,9 +8,51 @@
         content="width=device-width,height=device-height,inital-scale=1,maximum-scale=1,user-scalable=no">
     <meta name=format-detection content="telephone=no">
     <meta http-equiv=pragma content=no-cache>
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <link rel="manifest" href="./manifest.json" >
     <title>预约结果</title>
     <script src=https://bwton-cdn.oss-cn-shanghai.aliyuncs.com/act-img/3601ncp/rem.js></script>
     <script src="https://g.alicdn.com/dingding/dingtalk-jsapi/3.0.12/dingtalk.open.js"></script>
+    <script>
+        
+        if ('serviceWorker' in navigator) {
+            window.addEventListener('load', function() {
+                navigator.serviceWorker.register('/service-worker.js').then(function(registration) {
+                console.log('ServiceWorker registration successful with scope: ', registration.scope);
+                }, function(err) {
+                console.log('ServiceWorker registration failed: ', err);
+                });
+            });
+        }
+        window.addEventListener('beforeinstallprompt', (event) => {
+            alert(1)
+            // 阻止默认的安装提示
+            event.preventDefault();
+            // 保存事件对象，稍后会用到
+            deferredPrompt = event;
+            // 在页面中显示自定义的安装提示
+            showInstallPrompt();
+        });
+
+        const showInstallPrompt = () => {
+            const installButton = document.createElement('button');
+            installButton.innerText = 'Install App';
+            installButton.addEventListener('click', () => {
+                deferredPrompt.prompt();
+                deferredPrompt.userChoice.then((choiceResult) => {
+                if (choiceResult.outcome === 'accepted') {
+                    console.log('User accepted the install prompt');
+                } else {
+                    console.log('User dismissed the install prompt');
+                }
+                deferredPrompt = null;
+                });
+            });
+            // 将按钮添加到页面中
+            document.body.appendChild(installButton);
+            }
+    </script>
     <script>
         ;(function () {
             var src = '//cdn.jsdelivr.net/npm/eruda';
